# revoltmpdstatus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/revolt_mpd_status/: __init__.py
